# novel-ai-bridge

./: Cargo.toml
src/: error.rs  krake_client.rs  main.rs
tokenizers/: pile_tokenizer.json
