[package]
name = "novel-ai-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokenizers = "0.11.3"
actix-web = "4.1.0"
serde = "1.0.137"
serde_json = "1.0.82"
reqwest = { version = "0.11.11", features = ["json", "serde_json", "tokio-rustls"] }
rust-argon2 = "1.0"
arc-swap = "1.5.0"
tokio = { version = "1.19.2", features = ["sync"] }
log = "0.4.17"
env_logger = "0.9.0"
base64 = "0.13.0"
itertools = "0.10.3"
finalfusion = "0.17.2"
reductive = "0.9.0"
regex = "1"
once_cell = "1.12.0"
thiserror = "1.0.31"